# shlack

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build.sh  mkdocs.yml  slack-app-manifest.json
.cursor/rules/: shlack.mdc
src/: app.rs  commands.rs  config.rs  events.rs  formatting.rs  input.rs  main.rs  messages.rs  models.rs  persistence.rs  slack.rs  utils.rs  widgets.rs
src/slack/: blocks.rs  files.rs  http.rs  mod.rs  socket.rs  types.rs
src/ui/: cards.rs  chat_list.rs  chat_pane.rs  layout.rs  mod.rs
