[package]
name = "slack_client_rs"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
crossterm = "0.28"

# Async runtime
tokio = { version = "1.43", features = ["full"] }
futures = "0.3"

# HTTP client for Slack API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# WebSocket for real-time events
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "rustls-tls-native-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"
regex = "1.11"
unicode-width = "0.2"
dirs = "5.0"
once_cell = "1.19"
emojis = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Image preview (Kitty graphics protocol via ratatui-image)
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
ratatui-image = { version = "9.0", default-features = false, features = ["crossterm"] }
